update: Bio-container spacing & add Iosevka Fixed Light Italic
- add correct font: Iosevka Fixed Light Italic
- delete incorrect padding for top/btm `bio-container`

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -45,9 +45,9 @@
 }
 
 @font-face {
-  font-family: 'Iosevka';
+  font-family: 'Iosevka Fixed';
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url('/fonts/iosevka-italic.woff2') format('woff2');
+  src: url('/fonts/iosevka-fixed-italic.woff2') format('woff2');
 }
